[project]
name = "fast3r"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepspeed>=0.16.4",
    "einops>=0.8.1",
    "gradio>=5.21.0",
    "huggingface-hub[torch]>=0.29.3",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "hydra-optuna-sweeper>=1.2.0",
    "jupyterlab>=4.3.6",
    "lightning>=2.5.0.post0",
    "lightning-bolts>=0.7.0",
    "lightning-utilities>=0.14.1",
    "matplotlib>=3.10.1",
    "nvitop>=1.4.2",
    "open3d>=0.18.0",
    "opencv-python>=4.11.0.86",
    "pillow-heif>=0.22.0",
    "plotly>=6.0.0",
    "pre-commit>=4.1.0",
    "pyglet<2",
    "pytest>=8.3.5",
    "pytorch3d",
    "rich>=13.9.4",
    "roma>=1.5.2.1",
    "rootutils>=1.0.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.6.3",
    "tqdm>=4.67.1",
    "trimesh>=4.6.4",
    "viser>=0.2.23",
    "wandb>=0.19.8",
]



[tool.uv.sources]
torch = [
    { index = "pytorch-cu" },
]
torchvision = [
    { index = "pytorch-cu" },
]
pytorch3d = { git = "ssh://git@github.com/facebookresearch/pytorch3d.git", rev = "stable" }
